--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@apollo/gateway": "^0.49.0",
-    "apollo-server": "^3.6.4"
+    "apollo-server": "^3.6.4",
+    "graphql": "^16.3.0",
+    "graphql-modules": "^2.0.0"
   }
 }
